--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="project">
                     <h2>Magic8ball</h2>
-                    <p>One of my projects is a Magic 8 Ball web app built using HTML, CSS, and JavaScript. It emulates
+                    <p>My first project was a Magic 8 Ball web app built using HTML, CSS, and JavaScript. It emulates
                         the classic fortune-telling toy by generating random answers to user questions. It was an
                         engaging project that allowed me to practice JavaScript logic and user interaction</p>
                 </div>
