Added skills and hobbies
Also placeholders for project links.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>Projects:</h1>
             <p>I have created several projects that showcase my knowledge of HTML, CSS and .JS.
                 I've included the relevant links in the descriptions but feel free to have a nosey round my <a
-                    href="https://github.com/Newellso1/Portfolio">gitHub</a> repos</p>
+                    target="_blank" href="https://github.com/Newellso1/Portfolio">gitHub</a> repos</p>
             <div class="projectContainer">
                 <div class="project">
                     <h2>XP_Nostalgia</h2>
@@ -46,12 +46,14 @@
                         plays a handful of classic sound clips from the Windows XP operating system. I used jQuery to
                         easily play the sounds that had been loaded in my HTML place and to add a shake effect to
                         each button when clicked</p>
+                    <p class="links"><a href="">Repo</a> / <a href="">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Headstone Tool</h2>
                     <p>I created a Headstone Creator web app utilizing HTML, CSS, and JavaScript. This project
                         allows users to customize headstone templates with personalized text and designs. It showcases
                         my current industry knowledge, and ability to implement user-friendly interfaces</p>
+                    <p class="links"><a target="_blank" href="">Repo</a> / <a target="_blank" href="">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Tic Tac Toe</h2>
@@ -59,17 +61,54 @@
                         interactive
                         gaming experience played locally with an opponent. This project enabled me to enhance my
                         understanding of game logic and DOM manipulation</p>
+                    <p class="links"><a target="_blank" href="">Repo</a> / <a target="_blank" href="">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Magic8ball</h2>
                     <p>My first project was a Magic 8 Ball web app built using HTML, CSS, and JavaScript. It emulates
                         the classic fortune-telling toy by generating random answers to user questions. It was an
                         engaging project that allowed me to practice JavaScript logic and user interaction</p>
+                    <p class="links"><a target="_blank" href="">Repo</a> / <a target="_blank" href="">Project</a></p>
                 </div>
             </div>
         </div>
 
-        <div class="page">
+        <div class="page skills">
+            <h1>Skills / Hobbies</h1>
+            <ol>
+                <li><span class="listTitle">Web Development</span>
+                    <ul>
+                        <li>Solid understanding of HTML, CSS, and JavaScript</li>
+                        <li>Proficient in building responsive and visually appealing web pages.</li>
+                        <li class="blurred">knowledge of jQuery</li>
+                    </ul>
+                </li>
+                <li><span class="listTitle">Design</span>
+                    <ul>
+                        <li>Keen eye for design cultivated through designing memorials using a signwriting package
+                            for the past 14 years.</li>
+                        <li>Ability to create visually appealing layouts and user interfaces.</li>
+                        <li>Familiarity with design principles, color theory, and typography.</li>
+                    </ul>
+                </li>
+                <li><span class="listTitle">Software Proficiency</span>
+                    <ul>
+                        <li>Quick to learn new software applications</li>
+                        <li>Proficient in using image manipulation software such as Photoshop for editing and
+                            enhancing visuals</li>
+                        <li>Familiarity with Inkscape, a vector graphics editor, for creating scalable graphics and
+                            illustrations.</li>
+                    </ul>
+                </li>
+                <li><span class="listTitle">Problem Solving</span>
+                    <ul>
+                        <li>Strong analytical and problem solving skills</li>
+                        <li>Ability to break down complex problems into manageable chunks to help find an effective
+                            solution</li>
+                        <li>Comfortable troubleshooting and debugging code to ensure smooth functionality</li>
+                    </ul>
+                </li>
+            </ol>
 
         </div>
 
