Added Collapsing Navbar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,25 @@
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Zen+Tokyo+Zoo&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="script.js"></script>
     <title>Document</title>
 </head>
 
 <body>
+    <div class="nav-bar">
+        <div class="nav-top">
+            <input class="check" type="checkbox">
+            <ul id="nav-links" class="">
+                <li><a href="#page1">Hme</a></li>
+                <li><a href="#page2">Abt</a></li>
+                <li><a href="#page3">Prjct</a></li>
+                <li><a href="#page4">Skills</a></li>
+                <li><a href="#page5">@</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="content">
 
         <div id="page1" class="page hero">
