Project Links & Further Styling
Adding links to projects and styled nav button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="nav-bar">
         <div class="nav-top">
-            <input class="check" type="checkbox">
+            <div class="check" type="checkbox">◎</div>
             <ul id="nav-links" class="">
                 <li><a href="#page1">Hme</a></li>
                 <li><a href="#page2">Abt</a></li>
@@ -45,7 +45,7 @@
                 those near to them. However, my passion for technology and design has led me to embark on new journey
                 into the world of tech.
                 I am mainly self taught but have recently started a 12 week bootcamp put on by The Coders Guild where I
-                will hone the skills that I have already developed</p>
+                will work on the skills that I have already developed</p>
         </div>
 
         <div id="page3" class="page projects">
@@ -60,14 +60,14 @@
                         plays a handful of classic sound clips from the Windows XP operating system. I used jQuery to
                         easily play the sounds that had been loaded in my HTML place and to add a shake effect to
                         each button when clicked</p>
-                    <p class="links"><a href="">Repo</a> / <a href="">Project</a></p>
+                    <p class="links"><a href="https://github.com/Newellso1/XP-Soundboard">Repo</a> / <a href="https://newellso1.github.io/XP-Soundboard/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Headstone Tool</h2>
                     <p>I created a Headstone Creator web app utilizing HTML, CSS, and JavaScript. This project
                         allows users to customize headstone templates with personalized text and designs. It showcases
                         my current industry knowledge, and ability to implement user-friendly interfaces</p>
-                    <p class="links"><a target="_blank" href="">Repo</a> / <a target="_blank" href="">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Headstone-Tool">Repo</a> / <a target="_blank" href="https://newellso1.github.io/Headstone-Tool/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Tic Tac Toe</h2>
@@ -75,14 +75,14 @@
                         interactive
                         gaming experience played locally with an opponent. This project enabled me to enhance my
                         understanding of game logic and DOM manipulation</p>
-                    <p class="links"><a target="_blank" href="">Repo</a> / <a target="_blank" href="">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Tic-Tac-Toe">Repo</a> / <a target="_blank" href="https://newellso1.github.io/Tic-Tac-Toe/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Magic8ball</h2>
                     <p>My first project was a Magic 8 Ball web app built using HTML, CSS, and JavaScript. It emulates
                         the classic fortune-telling toy by generating random answers to user questions. It was an
                         engaging project that allowed me to practice JavaScript logic and user interaction</p>
-                    <p class="links"><a target="_blank" href="">Repo</a> / <a target="_blank" href="">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Magic-Eight-Ball---HTML-CSS-JS">Repo</a> / <a target="_blank" href="https://newellso1.github.io/Magic-Eight-Ball---HTML-CSS-JS/">Project</a></p>
                 </div>
             </div>
         </div>
