Added social links to nav-bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Zen+Tokyo+Zoo&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type='text/css'>
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="script.js"></script>
@@ -28,6 +30,8 @@
                 <li><a href="#page3">Prjct</a></li>
                 <li><a href="#page4">Skills</a></li>
                 <li><a href="#page5">@</a></li>
+                <li><a target="_blank" href="https://github.com/Newellso1"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/samnewell91/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </div>
@@ -60,14 +64,16 @@
                         plays a handful of classic sound clips from the Windows XP operating system. I used jQuery to
                         easily play the sounds that had been loaded in my HTML place and to add a shake effect to
                         each button when clicked</p>
-                    <p class="links"><a href="https://github.com/Newellso1/XP-Soundboard">Repo</a> / <a href="https://newellso1.github.io/XP-Soundboard/">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/XP-Soundboard">Repo</a> / <a
+                            target="_blank" href="https://newellso1.github.io/XP-Soundboard/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Headstone Tool</h2>
                     <p>I created a Headstone Creator web app utilizing HTML, CSS, and JavaScript. This project
                         allows users to customize headstone templates with personalized text and designs. It showcases
                         my current industry knowledge, and ability to implement user-friendly interfaces</p>
-                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Headstone-Tool">Repo</a> / <a target="_blank" href="https://newellso1.github.io/Headstone-Tool/">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Headstone-Tool">Repo</a> / <a
+                            target="_blank" href="https://newellso1.github.io/Headstone-Tool/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Tic Tac Toe</h2>
@@ -75,14 +81,18 @@
                         interactive
                         gaming experience played locally with an opponent. This project enabled me to enhance my
                         understanding of game logic and DOM manipulation</p>
-                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Tic-Tac-Toe">Repo</a> / <a target="_blank" href="https://newellso1.github.io/Tic-Tac-Toe/">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Tic-Tac-Toe">Repo</a> / <a
+                            target="_blank" href="https://newellso1.github.io/Tic-Tac-Toe/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>Magic8ball</h2>
                     <p>My first project was a Magic 8 Ball web app built using HTML, CSS, and JavaScript. It emulates
                         the classic fortune-telling toy by generating random answers to user questions. It was an
                         engaging project that allowed me to practice JavaScript logic and user interaction</p>
-                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/Magic-Eight-Ball---HTML-CSS-JS">Repo</a> / <a target="_blank" href="https://newellso1.github.io/Magic-Eight-Ball---HTML-CSS-JS/">Project</a></p>
+                    <p class="links"><a target="_blank"
+                            href="https://github.com/Newellso1/Magic-Eight-Ball---HTML-CSS-JS">Repo</a> / <a
+                            target="_blank"
+                            href="https://newellso1.github.io/Magic-Eight-Ball---HTML-CSS-JS/">Project</a></p>
                 </div>
             </div>
         </div>
