--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             target="_blank" href="https://newellso1.github.io/XP-Soundboard/">Project</a></p>
                 </div>
                 <div class="project">
-                    <h2>Headstone Tool</h2>
+                    <h2>Tombstone Tool</h2>
                     <p>I created a Headstone Creator web app utilizing HTML, CSS, and JavaScript. This project
                         allows users to customize headstone templates with personalized text and designs. It showcases
                         my current industry knowledge, and ability to implement user-friendly interfaces</p>
