--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="script.js"></script>
-    <title>Document</title>
+    <title>I AM SAM</title>
 </head>
 
 <body>
