--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Zen+Tokyo+Zoo&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
         type='text/css'>
+    <link rel="stylesheet" href="styles.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="script.js"></script>
@@ -30,8 +31,10 @@
                 <li><a href="#page3">Prjct</a></li>
                 <li><a href="#page4">Skills</a></li>
                 <li><a href="#page5">@</a></li>
-                <li><a target="_blank" href="https://github.com/Newellso1"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/samnewell91/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://github.com/Newellso1"><i class="fa fa-github fa-2x"
+                            aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/samnewell91/"><i class="fa fa-instagram fa-2x"
+                            aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </div>
