--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/13e4364fd4.js" crossorigin="anonymous"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Zen+Tokyo+Zoo&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
-        type='text/css'>
+    <script src="https://kit.fontawesome.com/13e4364fd4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
