--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#page2">Abt</a></li>
                 <li><a href="#page3">Prjct</a></li>
                 <li><a href="#page4">Skills</a></li>
-                <li><a href="#page5">@</a></li>
+                <li><a href="#page5"><i class="fa-regular fa-envelope fa-2x"></i></a></li>
                 <li><a target="_blank" href="https://github.com/Newellso1"><i class="fa fa-github fa-2x"
                             aria-hidden="true"></i></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/samnewell91/"><i class="fa fa-instagram fa-2x"
