Attempt at making button symbol center on all browers

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="nav-bar">
         <div class="nav-top">
-            <div class="check" type="checkbox">◎</div>
+            <div class="check" type="checkbox"><span>◎</span></div>
             <ul id="nav-links" class="">
                 <li><a href="#page1">Hme</a></li>
                 <li><a href="#page2">Abt</a></li>
