--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="script.js"></script>
+    <script src="https://kit.fontawesome.com/13e4364fd4.js" crossorigin="anonymous"></script>
     <title>I AM SAM</title>
 </head>
 
 <body>
     <div class="nav-bar">
         <div class="nav-top">
-            <div class="check" type="checkbox"><span>◎</span></div>
+            <div class="check"><i class="fa-solid fa-terminal"></i></div>
             <ul id="nav-links" class="">
                 <li><a href="#page1">Hme</a></li>
                 <li><a href="#page2">Abt</a></li>
