Changed colours to make more readable
Also added a new project

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
                     target="_blank" href="https://github.com/Newellso1/Portfolio">gitHub</a> repos</p>
             <div class="projectContainer">
                 <div class="project">
+                    <h2>What_2_do</h2>
+                    <p>This is a simple 'To do' list where the user can create a custom list of up to 14 tasks,
+                        rearrange them with by positioning them with a mouse and also delete either individual tasks or
+                        clear the entire list. I'm happy with the styling, and really enjoyed getting to grips with
+                        jQuery on this one. </p>
+                    <p class="links"><a target="_blank"
+                            href="https://github.com/Newellso1/What_2_Do">Repo</a> / <a
+                            target="_blank"
+                            href="https://newellso1.github.io/What_2_Do/">Project</a></p>
+                </div>
+                <div class="project">
                     <h2>XP_Nostalgia</h2>
                     <p>This is the first project of mine where I have used jQuery, I have made a basic soundboard that
                         plays a handful of classic sound clips from the Windows XP operating system. I used jQuery to
@@ -142,7 +153,7 @@
         <div id="page5" class="page contact">
             <h1>Contact:</h1>
             <p>If you like what you see and would like to find a bit more out about where I currently am in journey into
-                web Development then free free to get in touch</p>
+                web Development then please get in touch</p>
             <div class="formcarry-container">
                 <form action="form-process.php" method="POST" class="formcarry-form">
                     <label for="name">Your Name:</label>
