Adjusted Project container
Adjusted project container so that the projects span more of the page

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <div id="page5" class="page contact">
             <h1>Contact:</h1>
-            <p>If you like what you see and would like to find a bit more out about where I currently am in journey into
+            <p>If you like what you see and would like to find a bit more out about me or where I currently am in journey into
                 web Development then please get in touch</p>
             <div class="formcarry-container">
                 <form action="form-process.php" method="POST" class="formcarry-form">
