--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                 web Development then please get in touch</p>
             <div class="formcarry-container">
                 <form action="form-process.php" method="POST" class="formcarry-form">
-                    <label for="name">Your Name:</label>
+                    <label for="name">Name:</label>
                     <input type="text" id="name" name="fullName" required />
 
-                    <label for="email">Your Email:</label>
+                    <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required />
 
                     <label for="message">Your Message:</label>
