--- a/index.html
+++ b/index.html
@@ -166,9 +166,12 @@
                     <textarea name="message" id="message" cols="30" rows="10">
                     </textarea>
                     <button type="submit">Get in touch</button>
+                    <p class="workaround">(this won't work though as it's hosted on gitHub so just throw me an</br>
+                        <a href="mailto:samnewell91@gmail.com">Email)</a> </p>
                 </form>
             </div>
         </div>
+    
 
     </div>
 </body>
