Added my bootstrap projects to the project section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <p>I have created several projects that showcase my knowledge of HTML, CSS and .JS.
                 I've included the relevant links in the descriptions but feel free to have a nosey round my <a
                     target="_blank" href="https://github.com/Newellso1/Portfolio">gitHub</a> repos</p>
+
             <div class="projectContainer">
                 <div class="project">
                     <h2>What_2_do</h2>
@@ -67,10 +68,8 @@
                         rearrange them with by positioning them with a mouse and also delete either individual tasks or
                         clear the entire list. I'm happy with the styling, and really enjoyed getting to grips with
                         jQuery on this one. </p>
-                    <p class="links"><a target="_blank"
-                            href="https://github.com/Newellso1/What_2_Do">Repo</a> / <a
-                            target="_blank"
-                            href="https://newellso1.github.io/What_2_Do/">Project</a></p>
+                    <p class="links"><a target="_blank" href="https://github.com/Newellso1/What_2_Do">Repo</a> / <a
+                            target="_blank" href="https://newellso1.github.io/What_2_Do/">Project</a></p>
                 </div>
                 <div class="project">
                     <h2>XP_Nostalgia</h2>
@@ -109,6 +108,55 @@
                             href="https://newellso1.github.io/Magic-Eight-Ball---HTML-CSS-JS/">Project</a></p>
                 </div>
             </div>
+            <div class="bootstrap">
+                <h1>Website Reboots</h1>
+                <p>As part of the TGC bootcamp we had to learn the advantages (...and disadvantages) of the Bootstrap
+                    library and how it could be used to quicken the process in making responsive and user friendly
+                    websites</p>
+                <p>I set myself the challenge of "rebooting" some existing websites using bootstrap with a focus on
+                    making them more responsive</p>
+            </div>
+            <div class="bootstrapContainer">
+                <div class="project">
+                    <h2>GB Newell Ltd</h2>
+                    <p>For this website reboot I took my current company website which isn't responsive at
+                        all and made a simple one page website which demonstrates some of the features of bootstrap</p>
+                        <p class="links"><a target="_blank"
+                            href="https://github.com/Newellso1/Magic-Eight-Ball---HTML-CSS-JS">Repo</a> / <a
+                            target="_blank"
+                            href="https://www.gbnewell-memorials.co.uk/">Existing Site</a>
+                            / <a target="_blank" href="https://newellso1.github.io/GB_Reboot/Attempt2/">Reboot</a></p>
+                        </p>
+                </div>
+                <div class="project">
+                    <h2>Carpet Depot</h2>
+                    <p>This is a company based down the road from me, when I stumbled upon their website and couldn't
+                        help
+                        but notice that seemed a little outdated so I set about designing an more modern and responsive
+                        version</p>
+                        <p class="links"><a target="_blank"
+                            href="https://github.com/Newellso1/Magic-Eight-Ball---HTML-CSS-JS">Repo</a> / <a
+                            target="_blank"
+                            href="http://www.carpetdepots.com/">Existing Site</a> 
+                            / <a target="_blank" href="https://newellso1.github.io/Carpet_Reboot/#">Reboot</a></p>
+                </div>
+                <div class="project">
+                    <h2>Jame Bond Museum</h2>
+                    <p>This was the first reboot I attempted, whilst it's quite lacking in content it was my first foray
+                        into Bootstrap and it took me a while to get my head around the styling, especially as I
+                        attempted to display the pages on a carousel</p>
+                        <p class="links"><a target="_blank"
+                            href="https://github.com/Newellso1/Magic-Eight-Ball---HTML-CSS-JS">Repo</a> / <a
+                            target="_blank"
+                            href="https://www.007museum.com/">Existing Site</a>
+                            / <a target="_blank" href="https://newellso1.github.io/DoubleZero7/">Reboot</a></p>
+                            
+                </div>
+
+
+
+            </div>
+
         </div>
 
         <div id="page4" class="page skills">
@@ -152,10 +200,12 @@
 
         <div id="page5" class="page contact">
             <h1>Contact:</h1>
-            <p>If you like what you see and would like to find a bit more out about me or where I currently am in journey into
+            <p>If you like what you see and would like to find a bit more out about me or where I currently am in
+                journey into
                 web Development then please get in touch</p>
             <div class="formcarry-container">
-                <form method="post" action="https://forms.un-static.com/forms/af7c22eaf0bf7e8b8b373694eef9c7732508246f" class="formcarry-form">
+                <form method="post" action="https://forms.un-static.com/forms/af7c22eaf0bf7e8b8b373694eef9c7732508246f"
+                    class="formcarry-form">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="fullName" required />
 
@@ -171,7 +221,7 @@
                 </form>
             </div>
         </div>
-    
+
 
     </div>
 </body>
